--- a/htmlab.html
+++ b/htmlab.html
@@ -4,26 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>htmlLab</title>
+    <style>
+        body{
+         width: 20%;
+        margin: auto;
+        }
+       .name,.email{
+        text-align: center;
+        margin-bottom: -15px;
+       }
+       *{
+        font-family: Arial, Helvetica, sans-serif;
+       }
+        
+    </style>
 </head>
 <body>
+    <h1 class="name">Rene Rodriguez</h1>
+    <br>
+    <p class="email">afuereno@gmail.com</p>
+    <br>
+   <article><p>This webside is divided into a minimun of three areas, with a minumum of 
+    one of the areas having subordinate pages as well. Specifically, the areas
+</p>
+    <ol>
+        <li><b>About me.</b>This area may have subordinate pages for a fuller <i>Curriculum Vitae </i>or a résumé</li>
+        <li><b>Classes.</b>This area will have subordinate pages for four tasks de as part of the Tools for Information Literacy class[insert current semester here.]
+            <ul >
+            <li>Task 3 Markup</li>
+            <li>Task 4 Spreadsheets</li>
+            <li>5 Relational Databases</li>
+            <li>Presentational Graphics</li>
+        </ul></li>
+        <li><b>Interests.</b>This area may have subordinate pages for fuller explorations of personal interests.</li>
+        <br>
+        last updated on [8/07/23]
+    </ol>
+</article>
     
 </body>
 </html>
 
 
 
-Make Folder
-Make HTML File
-Make HTML boilerplate (basic code) using "!" in vs code
-git init
-git add .
-git commit -m 'make boilerplate for lab'
-Make repo on Github
-Connect local git to Github repo
-git push origin master OR git push origin main
-Write html code in html file to make it look like the image
-git add .
-git commit -m 'add html to match image'
-git push origin master OR git push origin main
-submit github link here
- 
